@@ -366,3 +366,5 @@ spline functions
 * John D Lamb <J.D.Lamb@btinternet.com> Marsaglia-Tsang gamma generator
 
 * Giulio Bottazzi <giulio.bottazzi@libero.it> improved exponential power distribution
+
+* Charles Karney <ckarney@sarnoff.com> added Leva bounds to gaussian ratio method generator
